# 
# Copyright 2014, 2015, 2016 Internet Corporation for Assigned Names and Numbers.
# 
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, you can obtain one at https://mozilla.org/MPL/2.0/.
#

Hedgehog 2.4.1 - 2018-05-08
----------------------------
* The only change is an update to the packaging that switches the postgres 9.3
  packages from 'depends' to 'suggests' to allow the user to choose the DB 
  version.


Hedgehog 2.4.0 - 2017-08-21
----------------------------
* Improved error handling when trying to insert invalid data into db 
* Renamed Node Statistics to Query Statistics in plot dropdown
* New configuration option to hide 'node' selection on web interface
* Add new graph for Server IP address vs transport (UDP/TCP)
* Changed license to MPL
* Added ability to re-name and remove nodes
* Tested with Postgesql-9.6


Hedgehog 2.3.0 - 2016-09-12
----------------------------
* Add ability to filter the server addresses displayed in the 'By server IP
  address' plot. Controlled by the database_update_service_addr script.
* Add new 'By region' graph which is now the default. This graph always groups
  the results by Region. The 'By node' graph now always displays a line per node
  regardless of the node selection (previously it grouped by Region when all
  nodes were selected).
* Default plot is now a configuration option. To specify a plot use the 'Hedgehog
  internal plot name' as listed in the User Guide.
* Update RSSAC report header format to match RSSC002v3 report.
* Enhancements to datafiles_create_summary script.


Hedgehog 2.2.0 - 2016-08-31
-----------------------------
* Added new dataset and plot dnskey_vs_asn


Hedgehog 2.1.1 - 2016-08-16
-----------------------------
* Fix issue with database_manage_partitions script where generating tables for
  -09 and -10 months didn't work
* Add additional check on input parameters