@@ -1,5 +1,5 @@
 
-<h1><ac:structured-macro ac:name="toc" ac:schema-version="1" ac:macro-id="f9e02cbb-e6f6-4fe6-b9b0-812aded99f27" /></h1>
+<p><ac:structured-macro ac:name="toc" ac:schema-version="1" ac:macro-id="f9e02cbb-e6f6-4fe6-b9b0-812aded99f27" /></p>
 <p>The following instructions describe how to install Hedgehog from Ubuntu Packages on Ubuntu 14.04 Server and set up imports of data.</p>
 <p><br /></p><ac:structured-macro ac:name="numberedheadings" ac:schema-version="1" ac:macro-id="b97e1073-8939-41e4-9abc-f56b74e227db"><ac:rich-text-body>
 <h1>Requirements</h1>
