@@ -6,6 +6,14 @@
 # file, you can obtain one at https://mozilla.org/MPL/2.0/.
 #
 
+Hedgehog 2.4.2 - 2019-01-08
+----------------------------
+* Improve validation of URL parameters to fix a SQL injection attack. The attack
+  can potentially leak data available to the user that the web server connects
+  to the database as. In the default configuration this is the 'www-data'
+  read-only user with access to only the Hedgehog database.
+
+
 Hedgehog 2.4.1 - 2018-05-08
 ----------------------------
 * The only change is an update to the packaging that switches the postgres 9.3
